19990820-12:50 GMT+1 Victor Szel <info@szelvesz.hu>
  * source/rdd/dbcmd.c
    ! SELF_DELETE -> SELF_DELETED (missed from the previous ChangeLog entry)

19990820-12:40 GMT+1 Victor Szel <info@szelvesz.hu>
  * source/rtl/filesys.c
    include/filesys.h
    + hb_fsFNameSplit()
      hb_fsFNameMerge() 
      filename handling functions and structure added to the Harbour RTL.
      These function were originated from MakeFilename() and SplitFileName()
  * tests/working/rtl_test.prg
    + rtl_test now shows the compiler version, os, date and time, other
      improvements.
    * All TRANSFORM() tests moved to rtl_test to allow automatic regression
      testing.
  * source/rtl/transfrm.c
    * PicFlags type changed to WORD
    * Some length and pos variable types changed to ULONG.
    * TOFIX: added about an unreachable code segment.
    * Some zero changed to '\0'.
  * source/rtl/strings.c
    source/rtl/maths.c
    source/rtl/dates.c
    source/rtl/arrays.c
    * QUESTION:s changed to NOTE: regarding the parameter checking

19990820-12:28 GMT+1 Antonio Linares <alinares@fivetech.com>
   * source/debug/debugger.prg
     * improved debugger functionality. F8 and F4 already operative.
   * source/debug/tbrwtext.prg
     * GotoLine() method added
   * source/vm/hvmc.
     * new bDebugging, bDebugShowLines variables added.
     * new hb_vmDebuggerShowLine() function

19990820-11:47 GMT+1 Bruno Cantero <bruno@issnet.net>
   * funclist.txt
     include/rddapi.h
     source/rdd/dbcmd.c
     source/rdd/dbf1.c
     source/rdd/sdf1.c
     source/rdd/delim1.c
     source/rdd/dbfntx/dbfntx1.c
     source/vm/hvm.c
     + Added new functions, changed VM for support Alias and updated function list.

19990819-18:42 GMT+1 Victor Szel <info@szelvesz.hu>
  * tests/working/rtl_test.prg
    + STUFF() and RAT() tests added, some more tests added to PAD*() family.
  * include/extend.h
    source/rtl/strings.c
    source/rtl/descend.c
    source/vm/hvm.c